--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "repseek"
 description = "Search for plamid replication proteins based on protein structures"
-authors = [{name = "Y.Moriwaki", email = "virgospica93@gmail.com"}]
+authors = [{ name = "Y.Moriwaki", email = "virgospica93@gmail.com" }]
 readme = "README.md"
-license = {file = "LICENSE"}
+license = { file = "LICENSE" }
 classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -19,21 +19,22 @@ classifiers = [
     'Operating System :: MacOS',
 ]
 requires-python = ">=3.9"
-dependencies = [
-    "absl-py","biopython","pandas"
-]
+dependencies = ["absl-py", "biopython", "pandas"]
 dynamic = ["version"]
 
 [project.optional-dependencies]
-dev = [
-    "pytest",
-    "flake8",
-    "mypy",
-    "black",
-]
+dev = ["pytest", "flake8", "mypy", "black"]
+
+[tool]
+rye = { dev-dependencies = [
+    "ipython>=8.18.1",
+    "ipykernel>=6.28.0",
+    "pytest>=7.4.4",
+    "notebook>=7.0.6",
+] }
 
 [tool.setuptools]
-package-dir = {"" = "repseek"}
+package-dir = { "" = "repseek" }
 
 [tool.setuptools_scm]
 write_to = "repseek/_version.py"
