--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "plaseek"
-version = "0.0.1"
+version = "0.0.2"
 description = "Search for plamid replication proteins based on protein structures"
 authors = [{ name = "Y.Moriwaki", email = "virgospica93@gmail.com" }]
 readme = "README.md"
@@ -16,7 +16,7 @@ classifiers = [
     'Operating System :: MacOS',
 ]
 requires-python = ">=3.9"
-dependencies = ["absl-py", "biopython", "pandas"]
+dependencies = ["absl-py", "biopython", "pandas", "requests"]
 
 [build-system]
 requires = ["hatchling"]
